Address accessibility and contrast issues, and update the telegram link

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,7 @@ $colors: (
 	primary_rgb: "rgb(62, 119, 163)",
 	secondary: #CCAD33,
 	white: #FFFFFF,
+	black: #000000,
 	text_dark: #333333,
 	text_light: #FFFFFF
 );
@@ -81,23 +82,19 @@ h6 {
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e")
 }
 
-.accordion-button:focus {
-	box-shadow: none;
-	border-color: rgba(0, 0, 0, .125);
-}
-
 .navbar-nav .nav-item {
 	align-self: center;
 	margin: 0 2rem;
+	font-size: 1.1rem;
 }
 
 .nav-link {
 	&.light {
-		color: map-get($colors, text_light);
+		color: map-get($colors, text_light) !important;
 	}
 
 	&.dark {
-		color: map-get($colors, text_dark);
+		color: map-get($colors, black) !important;
 		&.active {
 			color: map-get($colors, primary) !important;
 		}
